--- a/operations/pyroscope/helm/pyroscope/rendered/single-binary.yaml
+++ b/operations/pyroscope/helm/pyroscope/rendered/single-binary.yaml
@@ -25,7 +25,7 @@ kind: ServiceAccount
 metadata:
   name: pyroscope-dev-agent
   labels:
-    helm.sh/chart: agent-0.23.0
+    helm.sh/chart: agent-0.24.0
     app.kubernetes.io/name: agent
     app.kubernetes.io/instance: pyroscope-dev
     app.kubernetes.io/version: "v0.36.1"
@@ -742,7 +742,7 @@ kind: ClusterRole
 metadata:
   name: pyroscope-dev-agent
   labels:
-    helm.sh/chart: agent-0.23.0
+    helm.sh/chart: agent-0.24.0
     app.kubernetes.io/name: agent
     app.kubernetes.io/instance: pyroscope-dev
     app.kubernetes.io/version: "v0.36.1"
@@ -849,7 +849,7 @@ kind: ClusterRoleBinding
 metadata:
   name: pyroscope-dev-agent
   labels:
-    helm.sh/chart: agent-0.23.0
+    helm.sh/chart: agent-0.24.0
     app.kubernetes.io/name: agent
     app.kubernetes.io/instance: pyroscope-dev
     app.kubernetes.io/version: "v0.36.1"
@@ -889,7 +889,7 @@ kind: Service
 metadata:
   name: pyroscope-dev-agent-cluster
   labels:
-    helm.sh/chart: agent-0.23.0
+    helm.sh/chart: agent-0.24.0
     app.kubernetes.io/name: agent
     app.kubernetes.io/instance: pyroscope-dev
     app.kubernetes.io/version: "v0.36.1"
@@ -918,7 +918,7 @@ kind: Service
 metadata:
   name: pyroscope-dev-agent
   labels:
-    helm.sh/chart: agent-0.23.0
+    helm.sh/chart: agent-0.24.0
     app.kubernetes.io/name: agent
     app.kubernetes.io/instance: pyroscope-dev
     app.kubernetes.io/version: "v0.36.1"
@@ -1015,13 +1015,14 @@ kind: StatefulSet
 metadata:
   name: pyroscope-dev-agent
   labels:
-    helm.sh/chart: agent-0.23.0
+    helm.sh/chart: agent-0.24.0
     app.kubernetes.io/name: agent
     app.kubernetes.io/instance: pyroscope-dev
     app.kubernetes.io/version: "v0.36.1"
     app.kubernetes.io/managed-by: Helm
 spec:
   replicas: 1
+  podManagementPolicy: Parallel
   minReadySeconds: 10
   serviceName: pyroscope-dev-agent
   selector:
