--- a/examples/golang-push/rideshare/Dockerfile
+++ b/examples/golang-push/rideshare/Dockerfile
@@ -1,8 +1,6 @@
-FROM golang:1.18
+FROM golang:1.20
 
 WORKDIR /go/src/app
 COPY . .
-
-RUN echo $(pwd)
-
-CMD ["go", "run", "."]
+RUN go build main.go
+CMD ["./main"]
