Add workflow to keep `make docs` procedure up to date
Signed-off-by: Jack Baldry <jack.baldry@grafana.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -4,6 +4,7 @@
 # Documentation.
 /.github/workflows/publish-technical-documentation-next.yml     @jdbaldry
 /.github/workflows/publish-technical-documentation-release.yml  @jdbaldry
+/.github/workflows/update-make-docs.yml                         @jdbaldry
 /docs/                                                          @grafana/docs-profiles @grafana/pyroscope-team
 /docs/docs.mk                                                   @jdbaldry
 /docs/make-docs                                                 @jdbaldry
