--- a/examples/dotnet/rideshare/Dockerfile
+++ b/examples/dotnet/rideshare/Dockerfile
@@ -22,6 +22,7 @@ ENV PYROSCOPE_PROFILING_ENABLED=1
 ENV PYROSCOPE_PROFILING_ALLOCATION_ENABLED=true
 ENV PYROSCOPE_PROFILING_CONTENTION_ENABLED=true
 ENV PYROSCOPE_PROFILING_EXCEPTION_ENABLED=true
+ENV ASPNETCORE_URLS=http://*:5000
 
 
 CMD ["dotnet", "/dotnet/example.dll"]
