--- a/examples/java/rideshare/Dockerfile
+++ b/examples/java/rideshare/Dockerfile
@@ -1,11 +1,10 @@
-FROM openjdk:11-slim-bullseye
+FROM openjdk:17-slim-bullseye
 
 WORKDIR /opt/app
 
 RUN apt-get update && apt-get install ca-certificates -y && update-ca-certificates && apt-get install -y git
 
-#ADD https://github.com/pyroscope-io/pyroscope-java/releases/download/v0.8.0/pyroscope.jar /opt/app/pyroscope.jar
-ADD ./pyroscope.jar /opt/app/pyroscope.jar
+ADD https://github.com/pyroscope-io/pyroscope-java/releases/download/v0.8.0/pyroscope.jar /opt/app/pyroscope.jar
 
 COPY gradlew .
 COPY gradle gradle
@@ -24,5 +23,6 @@ ENV PYROSCOPE_PROFILER_ALLOC=512k
 ENV PYROSCOPE_UPLOAD_INTERVAL=15s
 ENV PYROSCOPE_LOG_LEVEL=debug
 ENV PYROSCOPE_SERVER_ADDRESS=http://localhost:4040
+EXPOSE 5000
 
-CMD ["java", "-javaagent:pyroscope.jar", "-jar", "./build/libs/rideshare-1.0-SNAPSHOT.jar"]
+CMD ["java", "-Dserver.port=5000",  "-javaagent:pyroscope.jar", "-jar", "./build/libs/rideshare-1.0-SNAPSHOT.jar" ]
