prepare rideshare examples for ingesting to grafana.com (#2416)
* fix

* fixes

* fix

* fix

* fix

--- a/examples/java/rideshare/Dockerfile
+++ b/examples/java/rideshare/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:11-slim-bullseye
+FROM openjdk:17-slim-bullseye
 
 WORKDIR /opt/app
 
@@ -23,5 +23,6 @@ ENV PYROSCOPE_PROFILER_ALLOC=512k
 ENV PYROSCOPE_UPLOAD_INTERVAL=15s
 ENV PYROSCOPE_LOG_LEVEL=debug
 ENV PYROSCOPE_SERVER_ADDRESS=http://localhost:4040
+EXPOSE 5000
 
-CMD ["java", "-javaagent:pyroscope.jar", "-jar", "./build/libs/rideshare-1.0-SNAPSHOT.jar"]
+CMD ["java", "-Dserver.port=5000",  "-javaagent:pyroscope.jar", "-jar", "./build/libs/rideshare-1.0-SNAPSHOT.jar" ]
