--- a/examples/tracing/jaeger/grafana/provisioning/datasources/datasources.yml
+++ b/examples/tracing/jaeger/grafana/provisioning/datasources/datasources.yml
@@ -10,7 +10,7 @@ datasources:
     url: http://jaeger:16686
 
   - name: Pyroscope
-    type: pyroscope-datasource
+    type: grafana-pyroscope-datasource
     access: proxy
     orgId: 1
     uid: pyroscope
