--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -2,7 +2,13 @@
 * @grafana/pyroscope-team
 
 # Documentation.
-/docs/ @grafana/docs-profiles @grafana/pyroscope-team
+/.github/workflows/publish-technical-documentation-next.yml     @jdbaldry
+/.github/workflows/publish-technical-documentation-release.yml  @jdbaldry
+/.github/workflows/update-make-docs.yml                         @jdbaldry
+/docs/                                                          @grafana/docs-profiles @grafana/pyroscope-team
+/docs/docs.mk                                                   @jdbaldry
+/docs/make-docs                                                 @jdbaldry
+/docs/variables.mk                                              @jdbaldry
 
 # eBPF collector
 /ebpf/ @korniltsev
