fix(helm): set correct namespace for all resources

--- a/operations/pyroscope/helm/pyroscope/templates/configmap-agent.yaml
+++ b/operations/pyroscope/helm/pyroscope/templates/configmap-agent.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ .Values.agent.agent.configMap.name }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "pyroscope.labels" . | nindent 4 }}
 data:
