--- a/operations/pyroscope/helm/pyroscope/templates/serviceaccount.yaml
+++ b/operations/pyroscope/helm/pyroscope/templates/serviceaccount.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "pyroscope.serviceAccountName" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "pyroscope.labels" . | nindent 4 }}
   {{- with .Values.pyroscope.serviceAccount.annotations }}
