--- a/operations/pyroscope/helm/pyroscope/templates/configmap-overrides.yaml
+++ b/operations/pyroscope/helm/pyroscope/templates/configmap-overrides.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ include "pyroscope.fullname" . }}-overrides-config
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "pyroscope.labels" . | nindent 4 }}
 data:
