--- a/operations/pyroscope/helm/pyroscope/templates/memberlist-service.yaml
+++ b/operations/pyroscope/helm/pyroscope/templates/memberlist-service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ template "pyroscope.fullname" . }}-memberlist
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "pyroscope.labels" . | nindent 4 }}
 spec:
