--- a/examples/golang-push/rideshare/docker-compose.yml
+++ b/examples/golang-push/rideshare/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       - 5000
     environment:
       - REGION=us-east
-      - PYROSCOPE_SERVER_ADDRESS=http://pyroscope:4040
+      - PYROSCOPE_SERVER_ADDRESS=http://host.docker.internal:4040
     build:
       context: .
 
@@ -14,7 +14,7 @@ services:
       - 5000
     environment:
       - REGION=eu-north
-      - PYROSCOPE_SERVER_ADDRESS=http://pyroscope:4040
+      - PYROSCOPE_SERVER_ADDRESS=http://host.docker.internal:4040
 
     build:
       context: .
@@ -24,14 +24,14 @@ services:
       - 5000
     environment:
       - REGION=ap-south
-      - PYROSCOPE_SERVER_ADDRESS=http://pyroscope:4040
+      - PYROSCOPE_SERVER_ADDRESS=http://host.docker.internal:4040
     build:
       context: .
 
-  pyroscope:
-    image: grafana/pyroscope:latest
-    ports:
-      - '4040:4040'
+  # pyroscope:
+  #   image: grafana/pyroscope:latest
+  #   ports:
+  #     - '4040:4040'
 
   load-generator:
     build:
