Fixes helm to not use a disk

--- a/operations/pyroscope/helm/pyroscope/values-micro-services.yaml
+++ b/operations/pyroscope/helm/pyroscope/values-micro-services.yaml
@@ -53,6 +53,8 @@ pyroscope:
     compactor:
       kind: StatefulSet
       replicaCount: 3
+      persistence:
+        enabled: false
       resources:
         limits:
           memory: 16Gi
