--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,9 +76,9 @@ jobs:
           repository: pyroscope-io/homebrew-brew
       - name: Update homebrew formulas
         run: |
-          git config --global url."https://x-access-token:$(echo "${GITHUB_TOKEN}" | xargs)@github.com/pyroscope-io/homebrew-brew".insteadOf "https://github.com/pyroscope-io/homebrew-brew"
-          git clone https://github.com/pyroscope-io/homebrew-brew
-          cd homebrew-brew
+          git config --global url."https://x-access-token:$(echo "${HOMEBREW_GITHUB_TOKEN}" | xargs)@github.com/pyroscope-io/homebrew-brew".insteadOf "https://github.com/pyroscope-io/homebrew-brew"
+          git clone https://github.com/pyroscope-io/homebrew-brew ../homebrew-brew
+          cd ../homebrew-brew
           make generate-formulas && git add Formula && git commit -m "chore: update formulas to ${}" && git push origin main
         env:
-          GITHUB_TOKEN: ${{ steps.brew-token.outputs.token }}
+          HOMEBREW_GITHUB_TOKEN: ${{ steps.brew-token.outputs.token }}
