fixes homebrew formulas

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,6 +77,8 @@ jobs:
       - name: Update homebrew formulas
         run: |
           git config --global url."https://x-access-token:$(echo "${HOMEBREW_GITHUB_TOKEN}" | xargs)@github.com/pyroscope-io/homebrew-brew".insteadOf "https://github.com/pyroscope-io/homebrew-brew"
+          git config --global user.email "dmitry+bot@pyroscope.io"
+          git config --global user.name "Pyroscope Bot <dmitry+bot@pyroscope.io>"
           git clone https://github.com/pyroscope-io/homebrew-brew ../homebrew-brew
           cd ../homebrew-brew
           make generate-formulas && git add Formula && git commit -m "chore: update formulas" && git push origin main
