--- a/operations/pyroscope/helm/pyroscope/rendered/single-binary.yaml
+++ b/operations/pyroscope/helm/pyroscope/rendered/single-binary.yaml
@@ -1285,6 +1285,7 @@ spec:
         fsGroup: 10001
         runAsNonRoot: true
         runAsUser: 10001
+      dnsPolicy: ClusterFirst
       containers:
         - name: "pyroscope"
           securityContext:
