--- a/operations/pyroscope/helm/pyroscope/values.yaml
+++ b/operations/pyroscope/helm/pyroscope/values.yaml
@@ -25,6 +25,7 @@ pyroscope:
   extraEnvFrom: []
 
   imagePullSecrets: []
+  dnsPolicy: ClusterFirst
   initContainers: []
   nameOverride: ""
   fullnameOverride: ""
