feat(chart): `ingressClassName` and `tls` for ingress (#2502)
* feat(chart): `ingressClassName` and `tls` for ingress

* feat(chart): values docs

* refactor(chart): `ingress.tls`

* feat(chart): rm k8s version check from ingress

* docs(chart): `ingress.className` example

* docs(chart): helm-docs

* Run `helm check`

---------

Co-authored-by: Christian Simon <simon@swine.de>

--- a/operations/pyroscope/helm/pyroscope/templates/ingress.yaml
+++ b/operations/pyroscope/helm/pyroscope/templates/ingress.yaml
@@ -11,6 +11,13 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
+  {{- with .Values.ingress.className }}
+  ingressClassName: {{ . }}
+  {{- end }}
+  {{- with .Values.ingress.tls }}
+  tls:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
   rules:
   {{- range $.Values.ingress.hosts }}
   - host: {{ . | quote }}
