review feedback first round

--- a/operations/pyroscope/helm/pyroscope/rendered/micro-services.yaml
+++ b/operations/pyroscope/helm/pyroscope/rendered/micro-services.yaml
@@ -2626,6 +2626,8 @@ spec:
               mountPath: /etc/pyroscope/overrides/
             - name: data
               mountPath: /data
+            - name: data-compactor
+              mountPath: /data-compactor
           resources:
             limits:
               memory: 16Gi
@@ -2639,6 +2641,8 @@ spec:
         - name: overrides-config
           configMap:
             name: pyroscope-dev-overrides-config
+        - name: data-compactor
+          emptyDir: {}
         - name: data
           emptyDir: {}
 ---
