Update microservices values for ci tests (#2553)
* Update microservices values for ci tests

We acutally didn't update this in a while and so don't fully test those
services.

* Also lower store-gateway memory limit

--- a/operations/pyroscope/helm/pyroscope/ci/micro-services-values.yaml
+++ b/operations/pyroscope/helm/pyroscope/ci/micro-services-values.yaml
@@ -13,6 +13,24 @@ pyroscope:
         requests:
           memory: 32Mi
           cpu: 10m
+    query-frontend:
+      kind: Deployment
+      replicaCount: 2
+      resources:
+        limits:
+          memory: 1Gi
+        requests:
+          memory: 32Mi
+          cpu: 10m
+    query-scheduler:
+      kind: Deployment
+      replicaCount: 2
+      resources:
+        limits:
+          memory: 1Gi
+        requests:
+          memory: 32Mi
+          cpu: 10m
     distributor:
       kind: Deployment
       replicaCount: 2
@@ -27,10 +45,23 @@ pyroscope:
       replicaCount: 3
       resources:
         limits:
-          memory: 12Gi
+          memory: 4Gi
         requests:
           memory: 256Mi
           cpu: 100m
+    store-gateway:
+      kind: StatefulSet
+      replicaCount: 3
+      persistence:
+      # The store-gateway needs not need persistent storage, but we still run it as a StatefulSet
+      # This is to avoid having blocks of data being
+        enabled: false
+      resources:
+        limits:
+          memory: 4Gi
+        requests:
+          memory: 64Mi
+          cpu: 20m
 
 minio:
   enabled: true
